--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -3858,6 +3858,9 @@ section.lazy-placeholder:after {
     padding-bottom: 0!important;
   }
 }
+.cid-sqASlsCRew .mbr-crt-title {
+  color: #55b4d4;
+}
 .cid-sqASlvhvJb {
   padding-top: 0px;
   padding-bottom: 30px;
@@ -10088,5 +10091,551 @@ section.lazy-placeholder:after {
   width: 100%;
 }
 .cid-sM5y2FA7EP foot-menu-item {
+  text-align: right;
+}
+.cid-sTlfbik6tb .navbar {
+  background: #232323;
+  transition: none;
+  min-height: 77px;
+  padding: .5rem 0;
+}
+.cid-sTlfbik6tb .navbar-dropdown.bg-color.transparent.opened {
+  background: #232323;
+}
+.cid-sTlfbik6tb a {
+  font-style: normal;
+}
+.cid-sTlfbik6tb .nav-item span {
+  padding-right: 0.4em;
+  line-height: 0.5em;
+  vertical-align: text-bottom;
+  position: relative;
+  text-decoration: none;
+}
+.cid-sTlfbik6tb .nav-item a {
+  display: -webkit-flex;
+  align-items: center;
+  justify-content: center;
+  padding: 0.7rem 0 !important;
+  margin: 0rem .65rem !important;
+  -webkit-align-items: center;
+  -webkit-justify-content: center;
+}
+.cid-sTlfbik6tb .nav-item:focus,
+.cid-sTlfbik6tb .nav-link:focus {
+  outline: none;
+}
+.cid-sTlfbik6tb .btn {
+  padding: 0.4rem 1.5rem;
+  display: -webkit-inline-flex;
+  align-items: center;
+  -webkit-align-items: center;
+}
+.cid-sTlfbik6tb .btn .mbr-iconfont {
+  font-size: 1.6rem;
+}
+.cid-sTlfbik6tb .menu-logo {
+  margin-right: auto;
+}
+.cid-sTlfbik6tb .menu-logo .navbar-brand {
+  display: flex;
+  margin-left: 5rem;
+  padding: 0;
+  transition: padding .2s;
+  min-height: 3.8rem;
+  -webkit-align-items: center;
+  align-items: center;
+}
+.cid-sTlfbik6tb .menu-logo .navbar-brand .navbar-caption-wrap {
+  display: flex;
+  -webkit-align-items: center;
+  align-items: center;
+  word-break: break-word;
+  min-width: 7rem;
+  margin: .3rem 0;
+}
+.cid-sTlfbik6tb .menu-logo .navbar-brand .navbar-caption-wrap .navbar-caption {
+  line-height: 1.2rem !important;
+  padding-right: 2rem;
+}
+.cid-sTlfbik6tb .menu-logo .navbar-brand .navbar-logo {
+  font-size: 4rem;
+  transition: font-size 0.25s;
+}
+.cid-sTlfbik6tb .menu-logo .navbar-brand .navbar-logo img {
+  display: flex;
+}
+.cid-sTlfbik6tb .menu-logo .navbar-brand .navbar-logo .mbr-iconfont {
+  transition: font-size 0.25s;
+}
+.cid-sTlfbik6tb .menu-logo .navbar-brand .navbar-logo a {
+  display: inline-flex;
+}
+.cid-sTlfbik6tb .navbar-toggleable-sm .navbar-collapse {
+  justify-content: flex-end;
+  -webkit-justify-content: flex-end;
+  padding-right: 5rem;
+  width: auto;
+}
+.cid-sTlfbik6tb .navbar-toggleable-sm .navbar-collapse .navbar-nav {
+  flex-wrap: wrap;
+  -webkit-flex-wrap: wrap;
+  padding-left: 0;
+}
+.cid-sTlfbik6tb .navbar-toggleable-sm .navbar-collapse .navbar-nav .nav-item {
+  -webkit-align-self: center;
+  align-self: center;
+}
+.cid-sTlfbik6tb .navbar-toggleable-sm .navbar-collapse .navbar-buttons {
+  padding-left: 0;
+  padding-bottom: 0;
+}
+.cid-sTlfbik6tb .dropdown .dropdown-menu {
+  background: #232323;
+  visibility: hidden;
+  display: block;
+  position: absolute;
+  min-width: 5rem;
+  padding-top: 1.4rem;
+  padding-bottom: 1.4rem;
+  text-align: left;
+}
+.cid-sTlfbik6tb .dropdown .dropdown-menu .dropdown-item {
+  width: auto;
+  padding: 0.235em 1.5385em 0.235em 1.5385em !important;
+}
+.cid-sTlfbik6tb .dropdown .dropdown-menu .dropdown-item::after {
+  right: 0.5rem;
+}
+.cid-sTlfbik6tb .dropdown .dropdown-menu .dropdown-submenu {
+  margin: 0;
+}
+.cid-sTlfbik6tb .dropdown.open > .dropdown-menu {
+  visibility: visible;
+}
+.cid-sTlfbik6tb .navbar-toggleable-sm.opened:after {
+  position: absolute;
+  width: 100vw;
+  height: 100vh;
+  content: '';
+  background-color: rgba(0, 0, 0, 0.1);
+  left: 0;
+  bottom: 0;
+  transform: translateY(100%);
+  -webkit-transform: translateY(100%);
+  z-index: 1000;
+}
+.cid-sTlfbik6tb .navbar.navbar-short {
+  min-height: 60px;
+  transition: all .2s;
+}
+.cid-sTlfbik6tb .navbar.navbar-short .navbar-toggler-right {
+  top: 20px;
+}
+.cid-sTlfbik6tb .navbar.navbar-short .navbar-logo a {
+  font-size: 2.5rem !important;
+  line-height: 2.5rem;
+  transition: font-size 0.25s;
+}
+.cid-sTlfbik6tb .navbar.navbar-short .navbar-logo a .mbr-iconfont {
+  font-size: 2.5rem !important;
+}
+.cid-sTlfbik6tb .navbar.navbar-short .navbar-logo a img {
+  height: 3rem !important;
+}
+.cid-sTlfbik6tb .navbar.navbar-short .navbar-brand {
+  min-height: 3rem;
+}
+.cid-sTlfbik6tb button.navbar-toggler {
+  width: 31px;
+  height: 18px;
+  cursor: pointer;
+  transition: all .2s;
+  top: 1.5rem;
+  right: 1rem;
+}
+.cid-sTlfbik6tb button.navbar-toggler:focus {
+  outline: none;
+}
+.cid-sTlfbik6tb button.navbar-toggler .hamburger span {
+  position: absolute;
+  right: 0;
+  width: 30px;
+  height: 2px;
+  border-right: 5px;
+  background-color: #ff3366;
+}
+.cid-sTlfbik6tb button.navbar-toggler .hamburger span:nth-child(1) {
+  top: 0;
+  transition: all .2s;
+}
+.cid-sTlfbik6tb button.navbar-toggler .hamburger span:nth-child(2) {
+  top: 8px;
+  transition: all .15s;
+}
+.cid-sTlfbik6tb button.navbar-toggler .hamburger span:nth-child(3) {
+  top: 8px;
+  transition: all .15s;
+}
+.cid-sTlfbik6tb button.navbar-toggler .hamburger span:nth-child(4) {
+  top: 16px;
+  transition: all .2s;
+}
+.cid-sTlfbik6tb nav.opened .hamburger span:nth-child(1) {
+  top: 8px;
+  width: 0;
+  opacity: 0;
+  right: 50%;
+  transition: all .2s;
+}
+.cid-sTlfbik6tb nav.opened .hamburger span:nth-child(2) {
+  -webkit-transform: rotate(45deg);
+  transform: rotate(45deg);
+  transition: all .25s;
+}
+.cid-sTlfbik6tb nav.opened .hamburger span:nth-child(3) {
+  -webkit-transform: rotate(-45deg);
+  transform: rotate(-45deg);
+  transition: all .25s;
+}
+.cid-sTlfbik6tb nav.opened .hamburger span:nth-child(4) {
+  top: 8px;
+  width: 0;
+  opacity: 0;
+  right: 50%;
+  transition: all .2s;
+}
+.cid-sTlfbik6tb .collapsed.navbar-expand {
+  flex-direction: column;
+  -webkit-flex-direction: column;
+}
+.cid-sTlfbik6tb .collapsed .btn {
+  display: -webkit-flex;
+}
+.cid-sTlfbik6tb .collapsed .navbar-collapse {
+  display: none !important;
+  padding-right: 0 !important;
+}
+.cid-sTlfbik6tb .collapsed .navbar-collapse.collapsing,
+.cid-sTlfbik6tb .collapsed .navbar-collapse.show {
+  display: block !important;
+}
+.cid-sTlfbik6tb .collapsed .navbar-collapse.collapsing .navbar-nav,
+.cid-sTlfbik6tb .collapsed .navbar-collapse.show .navbar-nav {
+  display: block;
+  text-align: center;
+}
+.cid-sTlfbik6tb .collapsed .navbar-collapse.collapsing .navbar-nav .nav-item,
+.cid-sTlfbik6tb .collapsed .navbar-collapse.show .navbar-nav .nav-item {
+  clear: both;
+}
+.cid-sTlfbik6tb .collapsed .navbar-collapse.collapsing .navbar-nav .nav-item:last-child,
+.cid-sTlfbik6tb .collapsed .navbar-collapse.show .navbar-nav .nav-item:last-child {
+  margin-bottom: 1rem;
+}
+.cid-sTlfbik6tb .collapsed .navbar-collapse.collapsing .navbar-buttons,
+.cid-sTlfbik6tb .collapsed .navbar-collapse.show .navbar-buttons {
+  text-align: center;
+}
+.cid-sTlfbik6tb .collapsed .navbar-collapse.collapsing .navbar-buttons:last-child,
+.cid-sTlfbik6tb .collapsed .navbar-collapse.show .navbar-buttons:last-child {
+  margin-bottom: 1rem;
+}
+@media (min-width: 1024px) {
+  .cid-sTlfbik6tb .collapsed:not(.navbar-short) .navbar-collapse {
+    max-height: calc(98.5vh - 3.8rem);
+  }
+}
+.cid-sTlfbik6tb .collapsed button.navbar-toggler {
+  display: block;
+}
+.cid-sTlfbik6tb .collapsed .navbar-brand {
+  margin-left: 1rem !important;
+}
+.cid-sTlfbik6tb .collapsed .navbar-toggleable-sm {
+  flex-direction: column;
+  -webkit-flex-direction: column;
+}
+.cid-sTlfbik6tb .collapsed .dropdown .dropdown-menu {
+  width: 100%;
+  text-align: center;
+  position: relative;
+  opacity: 0;
+  overflow: hidden;
+  display: block;
+  height: 0;
+  visibility: hidden;
+  padding: 0;
+  transition-duration: .5s;
+  transition-property: opacity,padding,height;
+}
+.cid-sTlfbik6tb .collapsed .dropdown.open > .dropdown-menu {
+  position: relative;
+  opacity: 1;
+  height: auto;
+  padding: 1.4rem 0;
+  visibility: visible;
+}
+.cid-sTlfbik6tb .collapsed .dropdown .dropdown-submenu {
+  left: 0;
+  text-align: center;
+  width: 100%;
+}
+.cid-sTlfbik6tb .collapsed .dropdown .dropdown-toggle[data-toggle="dropdown-submenu"]::after {
+  margin-top: 0;
+  position: inherit;
+  right: 0;
+  top: 50%;
+  display: inline-block;
+  width: 0;
+  height: 0;
+  margin-left: .3em;
+  vertical-align: middle;
+  content: "";
+  border-top: .30em solid;
+  border-right: .30em solid transparent;
+  border-left: .30em solid transparent;
+}
+@media (max-width: 1023px) {
+  .cid-sTlfbik6tb.navbar-expand {
+    flex-direction: column;
+    -webkit-flex-direction: column;
+  }
+  .cid-sTlfbik6tb img {
+    height: 3.8rem !important;
+  }
+  .cid-sTlfbik6tb .btn {
+    display: -webkit-flex;
+  }
+  .cid-sTlfbik6tb button.navbar-toggler {
+    display: block;
+  }
+  .cid-sTlfbik6tb .navbar-brand {
+    margin-left: 1rem !important;
+  }
+  .cid-sTlfbik6tb .navbar-toggleable-sm {
+    flex-direction: column;
+    -webkit-flex-direction: column;
+  }
+  .cid-sTlfbik6tb .navbar-collapse {
+    display: none !important;
+    padding-right: 0 !important;
+  }
+  .cid-sTlfbik6tb .navbar-collapse.collapsing,
+  .cid-sTlfbik6tb .navbar-collapse.show {
+    display: block !important;
+  }
+  .cid-sTlfbik6tb .navbar-collapse.collapsing .navbar-nav,
+  .cid-sTlfbik6tb .navbar-collapse.show .navbar-nav {
+    display: block;
+    text-align: center;
+  }
+  .cid-sTlfbik6tb .navbar-collapse.collapsing .navbar-nav .nav-item,
+  .cid-sTlfbik6tb .navbar-collapse.show .navbar-nav .nav-item {
+    clear: both;
+  }
+  .cid-sTlfbik6tb .navbar-collapse.collapsing .navbar-nav .nav-item:last-child,
+  .cid-sTlfbik6tb .navbar-collapse.show .navbar-nav .nav-item:last-child {
+    margin-bottom: 1rem;
+  }
+  .cid-sTlfbik6tb .navbar-collapse.collapsing .navbar-buttons,
+  .cid-sTlfbik6tb .navbar-collapse.show .navbar-buttons {
+    text-align: center;
+  }
+  .cid-sTlfbik6tb .navbar-collapse.collapsing .navbar-buttons:last-child,
+  .cid-sTlfbik6tb .navbar-collapse.show .navbar-buttons:last-child {
+    margin-bottom: 1rem;
+  }
+  .cid-sTlfbik6tb .dropdown .dropdown-menu {
+    width: 100%;
+    text-align: center;
+    position: relative;
+    opacity: 0;
+    overflow: hidden;
+    display: block;
+    height: 0;
+    visibility: hidden;
+    padding: 0;
+    transition-duration: .5s;
+    transition-property: opacity,padding,height;
+  }
+  .cid-sTlfbik6tb .dropdown.open > .dropdown-menu {
+    position: relative;
+    opacity: 1;
+    height: auto;
+    padding: 1.4rem 0;
+    visibility: visible;
+  }
+  .cid-sTlfbik6tb .dropdown .dropdown-submenu {
+    left: 0;
+    text-align: center;
+    width: 100%;
+  }
+  .cid-sTlfbik6tb .dropdown .dropdown-toggle[data-toggle="dropdown-submenu"]::after {
+    margin-top: 0;
+    position: inherit;
+    right: 0;
+    top: 50%;
+    display: inline-block;
+    width: 0;
+    height: 0;
+    margin-left: .3em;
+    vertical-align: middle;
+    content: "";
+    border-top: .30em solid;
+    border-right: .30em solid transparent;
+    border-left: .30em solid transparent;
+  }
+}
+@media (min-width: 767px) {
+  .cid-sTlfbik6tb .menu-logo {
+    flex-shrink: 0;
+    -webkit-flex-shrink: 0;
+  }
+}
+.cid-sTlfbik6tb .navbar-collapse {
+  flex-basis: auto;
+  -webkit-flex-basis: auto;
+}
+.cid-sTlfbik6tb .nav-link:hover,
+.cid-sTlfbik6tb .dropdown-item:hover {
+  color: #149dcc !important;
+}
+.cid-sTlfbjVxy9 {
+  padding-top: 75px;
+  padding-bottom: 0px;
+  background-color: #4f1d74;
+}
+.cid-sTlfbjVxy9 P {
+  color: #767676;
+}
+.cid-sTlfbjVxy9 .mbr-text,
+.cid-sTlfbjVxy9 .mbr-section-btn {
+  color: #ffffff;
+}
+.cid-sTlfbjVxy9 H1 {
+  color: #ffffff;
+}
+.cid-sTlfblOQhZ {
+  padding-top: 30px;
+  padding-bottom: 15px;
+  background-color: #ffffff;
+}
+.cid-sTlfblOQhZ .mbr-text {
+  color: #767676;
+}
+.cid-sTlfbnpOeQ {
+  background: #34164b;
+  padding-top: 0px;
+  padding-bottom: 15px;
+  background: linear-gradient(0deg, #34164b, #ffffff);
+}
+.cid-sTlfbnpOeQ .video-block {
+  margin: auto;
+}
+@media (max-width: 768px) {
+  .cid-sTlfbnpOeQ .video-block {
+    width: 100% !important;
+  }
+}
+.cid-sTlfboGB1k {
+  padding-top: 30px;
+  padding-bottom: 15px;
+  background-color: #ffffff;
+}
+.cid-sTlfboGB1k h4 {
+  font-weight: 500;
+  margin-bottom: 0;
+  text-align: left;
+}
+.cid-sTlfboGB1k p {
+  color: #767676;
+  text-align: left;
+}
+.cid-sTlfboGB1k .card-box {
+  padding-top: 2rem;
+}
+.cid-sTlfboGB1k .card-wrapper {
+  height: 100%;
+}
+.cid-sTlfbqLwgF {
+  padding-top: 30px;
+  padding-bottom: 30px;
+  background-color: #2e2e2e;
+}
+.cid-sTlfbqLwgF .row-links {
+  width: 100%;
+  -webkit-justify-content: center;
+  justify-content: center;
+}
+.cid-sTlfbqLwgF .social-row {
+  width: 100%;
+  -webkit-justify-content: center;
+  justify-content: center;
+}
+.cid-sTlfbqLwgF .media-container-row {
+  -webkit-flex-direction: column;
+  flex-direction: column;
+  -webkit-justify-content: center;
+  justify-content: center;
+  -webkit-align-items: center;
+  align-items: center;
+}
+.cid-sTlfbqLwgF .media-container-row .foot-menu {
+  list-style: none;
+  display: flex;
+  -webkit-justify-content: center;
+  justify-content: center;
+  -webkit-flex-wrap: wrap;
+  flex-wrap: wrap;
+  padding: 0;
+  margin-bottom: 0;
+}
+.cid-sTlfbqLwgF .media-container-row .foot-menu li {
+  padding: 0 1rem 1rem 1rem;
+}
+.cid-sTlfbqLwgF .media-container-row .foot-menu li p {
+  margin: 0;
+}
+.cid-sTlfbqLwgF .media-container-row .social-list {
+  padding-left: 0;
+  margin-bottom: 0;
+  list-style: none;
+  display: flex;
+  -webkit-flex-wrap: wrap;
+  flex-wrap: wrap;
+  -webkit-justify-content: flex-end;
+  justify-content: flex-end;
+}
+.cid-sTlfbqLwgF .media-container-row .social-list .mbr-iconfont-social {
+  font-size: 1.5rem;
+  color: #ffffff;
+}
+.cid-sTlfbqLwgF .media-container-row .social-list .soc-item {
+  margin: 0 .5rem;
+}
+.cid-sTlfbqLwgF .media-container-row .social-list a {
+  margin: 0;
+  opacity: .5;
+  -webkit-transition: .2s linear;
+  transition: .2s linear;
+}
+.cid-sTlfbqLwgF .media-container-row .social-list a:hover {
+  opacity: 1;
+}
+@media (max-width: 767px) {
+  .cid-sTlfbqLwgF .media-container-row .social-list {
+    -webkit-justify-content: center;
+    justify-content: center;
+  }
+}
+.cid-sTlfbqLwgF .media-container-row .row-copirayt {
+  word-break: break-word;
+  width: 100%;
+}
+.cid-sTlfbqLwgF .media-container-row .row-copirayt p {
+  width: 100%;
+}
+.cid-sTlfbqLwgF foot-menu-item {
   text-align: right;
 }
